A lot of changes

--- a/TravelPal/TravelPal.csproj
+++ b/TravelPal/TravelPal.csproj
@@ -7,4 +7,20 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="TravelPal.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <SplashScreen Include="TravelPal.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </SplashScreen>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="UsernameTaken.cs">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
